{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "6f641add-9ca4-4be1-bca9-21f9355014c2",
            "actions": [
                {
                    "name": "OnLeftClick",
                    "type": "Button",
                    "id": "a424da8a-b975-4c9f-b255-5621dd30594c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnRightClick",
                    "type": "Button",
                    "id": "a3d616d3-58a4-4f30-a4df-11ced216e3df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnMiddleClick",
                    "type": "Button",
                    "id": "dade0cca-a3cc-440e-9638-4aa6549a1ff0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "13aba83b-86b6-4050-b838-14a450b02671",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5d99450b-7a95-4474-9f86-d785079a7a4a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02cbe92c-cb5b-4a37-9588-ac86c9848191",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe094ada-43bd-4867-a665-2ef0dcddfa1b",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMiddleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f31503ae-928a-4e83-89b4-dde826a46682",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}